hphp/hack/test/typecheck/function_pointer/obj_get_simple.php.exp
File "obj_get_simple.php", line 11, characters 8-16:
Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. (Parsing[1002])
