hphp/hack/test/typecheck/function_pointer/obj_get_simple.php
<?hh

final class Foo {
  public function bar(int $x): void {

  }
}

function baz(): void {
  $x = new Foo();
  $y = $x->bar<>;
  $y(4);
}
